--- a/docker-compose.exemple.yml
+++ b/docker-compose.exemple.yml
@@ -13,6 +13,10 @@ services:
       - GOOGLE_ID=idExample
       - GOOGLE_SECRET=secretExample
       - REDIRECT_URL=http://localhost:3000/auth/google/redirect
+      - MAIL_HOST=Email Delivery Platform
+      - MAIL_PORT=1234
+      - MAIL_USER=userExample
+      - MAIL_PASS=passwordExample
       # Adicione outras variáveis de ambiente aqui, se necessário
     volumes:
       - ./src:/app/src
